--- a/index.html
+++ b/index.html
@@ -1752,6 +1752,7 @@
         <option value="card games">Card Games</option>
         <option value="board games">Board Games</option>
         <option value="puzzles">Puzzles</option>
+        <option value="online">Online Games</option>
         <!-- Add more filter options as needed -->
       </select>
     </div>
@@ -1772,6 +1773,10 @@
       <a href="/air-hockey" class="item-box" data-category="online">
         <img src="\images\products\games\air-hockey-preview.webp" alt="">
         <h3>Air Hockey Online</h3>
+      </a>
+      <a href="/chess" class="item-box" data-category="online">
+        <img src="\images\products\games\chess-preview.jpg" alt="">
+        <h3>Chess</h3>
       </a>
       <a href="products#life" class="item-box" data-category="card games">
         <img src="\images\products\games\life cover.jpeg" alt="">
