update meta descriptions

--- a/air-hockey.html
+++ b/air-hockey.html
@@ -1,6 +1,7 @@
 
 <html><head>
     <title>Unlim8ted Air Hockey</title>
+    <meta name="description"content="Online air hockey \ pin ball game, retro, customizable settings, powered by Unlim8ted Studio Production."/>
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .loader {
