--- a/chess.html
+++ b/chess.html
@@ -1,7 +1,7 @@
 <html><head>
   <title>Unlim8ted Chess</title>
 <meta property="og:title" content="Unlim8ted Chess">
-
+<meta name="description"content="Play chess against different difficulties of AI. Watch AI play against itself. Learn to play chess. Customizable Visuals. Unlim8ted Chess, always free no sign up required. Powered by Unlim8ted Studio Productions."/>
   <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .loader {
