--- a/customeffectcreator.html
+++ b/customeffectcreator.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Custom Effect Creator with Keypoints</title>
+  <title>Custom Unlim8ted Effect Creator with Keypoints</title>
+  <meta name="description"content="Custom Unlim8ted Face effect creator, powered by Unlim8ted Studio Productions."/>
   <style>
     body {
       margin: 0;
