--- a/facewarp.html
+++ b/facewarp.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TensorFlow.js Face Warp Effects</title>
+  <title>Unlim8ted Face Warp Effects</title>
+  <meta name="description"content="Create custom face warp effects with Unlim8ted software. Powered by Unlim8ted Studio Productions. Always free no sign up required."/>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/facemesh"></script>
   <style>
