--- a/music-generator.html
+++ b/music-generator.html
@@ -3,31 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transformers.js Example</title>
+    <title>Unlim8ted Music Generation</title>
+    <meta name="description"content="Unlim8ted Procedural music. Free forever no signup required. Powered by Unlim8ted Studio Productions Technology."/>
 </head>
 <body>
-    <h1>Transformers.js Example</h1>
-    <div id="result"></div>
-
-    <script type="module">
-        import { pipeline } from 'https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.2';
-
-        // Asynchronous function to load and use the pipeline
-        (async () => {
-            try {
-                // Load the sentiment-analysis pipeline
-                const sentimentAnalysis = await pipeline('sentiment-analysis');
-
-                // Analyze a sample text
-                const result = await sentimentAnalysis('I love Transformers.js!');
-
-                // Display the result
-                document.getElementById('result').innerText = JSON.stringify(result, null, 2);
-            } catch (error) {
-                console.error('Error loading pipeline:', error);
-                document.getElementById('result').innerText = 'Error loading the pipeline!';
-            }
-        })();
-    </script>
+    <h1>Feature Unavailable</h1>
+    <a>Sorry but this page is currently down due to technical difficulties. 😔</a>
+    <a href="javascript:history.back()" class="back-button">Take Me Back to Reality</a>
 </body>
 </html>
