--- a/script-generator.html
+++ b/script-generator.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feature Removed</title>
+    <meta name="description"content="Unlim8ted Film Script Generator. Unlim8ted Screenplay generator. Always free no sign up required. Powered by Unlim8ted Studio Productions."/>
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
