--- a/squareproduct.html
+++ b/squareproduct.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Details</title>
+    <title>Unlim8ted Product Details</title>
+    <meta name="description"content="Unlim8ted Product page. Powered by Unlim8ted Studio Productions"/>
+
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
