--- a/success.html
+++ b/success.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success</title>
+    <meta name="description"content="Unlim8ted Success page. Powered by Unlim8ted Studio Productions"/>
+
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
