--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-
+    <meta name="description"content="Title: 404 - Page Not Found 404 Unlim8ted. it seems you've found a page that doesn't exist . Learn more at Unlim8ted Studio Productions." name="description"/>
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
