--- a/502.html
+++ b/502.html
@@ -161,6 +161,7 @@
       }
     }
   </style>
+  <meta name="description" content="Title: Error. Content: the page you are looking for is currently unavailable . Learn more at Unlim8ted Studio Productions." name="description"/>
   <!-- Styles for the No-JavaScript message -->
   <style>
     .no-js-message {
