--- a/50x.html
+++ b/50x.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="description" content="Title: Error. Content: the page you are looking for is currently unavailable . Learn more at Unlim8ted Studio Productions." name="description"/>
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
@@ -247,7 +248,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 Please try again later.</p>
 <p>If you are the system administrator of this resource then you should check
 the error log for details.</p>
-<p><em>Faithfully yours, nginx.</em></p>
+<p><em>Faithfully yours, Unlim8ted Hosting Services.</em></p>
 </body>
     <!-- Copyright -->
     <div style="margin-top: 20px;">
