--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart</title>
+    <title>Unlim8ted Cart</title>
+    <meta name="description"content="View your Unlim8ted cart, powered by Unlim8ted Studio Productions"/>
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
