--- a/live-game.html
+++ b/live-game.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feature Removed</title>
+    <title>Feature Removed - Unlim8ted</title>
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
