--- a/podcasts.html
+++ b/podcasts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unlim8ted Podcasts</title>
-    
+    <meta name="description"content="Unlim8ted Podcasts. Funny informational podcasts. Always free, no signup required. Powered by Unlim8ted Studio Productions."/>
   <style media="screen" type="text/css">
     .layer1_class {
       position: absolute;
