--- a/puzzle-squares.html
+++ b/puzzle-squares.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unlim8ted</title>
+    <meta name="description"content="Fun puzzles. Always free no sign up required. Powered by Unlim8ted Studio Productions"/>
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
