--- a/shop.html
+++ b/shop.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="description"content="Unlim8ted Physical Items Shop. Powered by Unlim8ted Studio Productions."/>
   <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .layer1_class {
