--- a/square-pixels.html
+++ b/square-pixels.html
@@ -1,3 +1,4 @@
+<meta name="description"content="Unlim8ted Square Pixels Product Page. Powered by Unlim8ted Studio Productions."/>
 <style>
     /* Enhancements for Typography */
     body, html {
