--- a/text-summarizer.html
+++ b/text-summarizer.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Summarize Text</title>
+    <title>Unlim8ted Summarize Text</title>
+    <meta name="description"content="Unlim8ted Summarize Text AI. Free forever no signup required. Powered by Unlim8ted Studio Productions Technology."/>
+
       <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
   <style media="screen" type="text/css">
     .loader {
