square products abreviate product urls

--- a/squareproduct.html
+++ b/squareproduct.html
@@ -1251,7 +1251,7 @@
               </nav>
 
   <div class="embed-container">
-    <embed class="full-screen-embed" src="@product url@">
+    <embed class="full-screen-embed" src="https://unlim8ted-studio-productions.square.site/product/@product url@">
   </div>
 
 
