sitemap and changed external pictures to internal as well as improve square pixels page.

--- a/404.html
+++ b/404.html
@@ -291,7 +291,7 @@
     <div class="container">
         <h1>404</h1>
         <p>Well, this is awkward...</p>
-        <img src="https://via.placeholder.com/400x200?text=Oops%21+Not+Found" alt="404 Image">
+        <img src="images\error\not_found.png" alt="404 Image">
         <p>It seems you've found a page that doesn't exist. It's either hiding or was eaten by a cat. 🐱</p>
         <a href="javascript:history.back()" class="back-button">Take Me Back to Reality</a>
         <p class="funny-text">P.S. Try checking under your couch. Maybe the page fell there. 🛋️</p>
