--- a/502.html
+++ b/502.html
@@ -291,7 +291,7 @@
     <div class="container">
         <h1>502 Bad Gateway</h1>
         <p>Looks like something went wrong between the servers. Again. 🙄</p>
-        <img src="https://via.placeholder.com/400x200" alt="Error Image">
+        <img src="images\error\not_found.png" alt="Error Image">
         <p>But don't worry, you can try refreshing the page or come back later when the servers are in a better mood!</p>
         <a href="javascript:location.reload()" class="refresh-button">Refresh the Page</a>
         <a href="javascript:history.back()" class="refresh-button">Go backwards in time?</a>
