--- a/square-pixels.html
+++ b/square-pixels.html
@@ -447,25 +447,24 @@
   </script>
   <p>Welcome to Square Pixel!</p>
   <p><button  class='.btn'href="https://github.com/GusInfiniteLinesOfCode/Square-Pixels/graphs/contributors"><img
-    src="https://img.shields.io/github/contributors/othneildrew/Best-README-Template.svg?style=for-the-badge"
+    src="https://img.shields.io/github/contributors/Unlim8ted-Studio-Productions/Square-Pixels?style=for-the-badge"
     alt="Contributors"></button>
     <button class='.btn' href="https://github.com/GusInfiniteLinesOfCode/Square-Pixels/network/members"><img
-       src="https://img.shields.io/github/forks/othneildrew/Best-README-Template.svg?style=for-the-badge"
+       src="https://img.shields.io/github/forks/Unlim8ted-Studio-Productions/Square-Pixels?style=for-the-badge"
        alt="Forks"></button>
     <button class='.btn' href="https://github.com/GusInfiniteLinesOfCode/Square-Pixels/stargazers"><img
-       src="https://img.shields.io/github/stars/othneildrew/Best-README-Template.svg?style=for-the-badge"
+       src="https://img.shields.io/github/stars/Unlim8ted-Studio-Productions/Square-Pixels?style=for-the-badge"
        alt="Stargazers"></button>
     <button class='.btn' href="https://github.com/GusInfiniteLinesOfCode/Square-Pixels/issues"><img
-       src="https://img.shields.io/github/issues/othneildrew/Best-README-Template.svg?style=for-the-badge"
+       src="https://img.shields.io/github/issues/Unlim8ted-Studio-Productions/Square-Pixels?style=for-the-badge"
        alt="Issues"></button>
     <button class='.btn' href="https://github.com/GusInfiniteLinesOfCode/Square-Pixela/blob/main/LICENSE.md"><img
-       src="https://img.shields.io/github/license/othneildrew/Best-README-Template.svg?style=for-the-badge"
+       src="https://img.shields.io/github/license/Unlim8ted-Studio-Productions/Square-Pixels?style=for-the-badge"
        alt="MIT License"></button>
     <button class='.btn' href="(javascript:%28function%28%29%7Balert%28%22Nothing%20Here%20Yet%22%29%7D%29%28%29%3B)"><img
        src="https://img.shields.io/badge/-LinkedIn-black.svg?style=for-the-badge&amp;logo=linkedin&amp;colorB=555"
        alt="LinkedIn"></button>
   </p>
-  <p>totally working stats bar definitly not broken for some reason</p>
   <h2 id="table-of-contents">Table of Contents</h2>
   <ul>
     <li><a href="#introduction">Introduction</a></li>
@@ -573,16 +572,16 @@
   </ul>
   <h2 id="game-screenshots">game screenshots</h2>
   <div class="parallax-container">
-    <img src="https://raw.githubusercontent.com/Unlim8ted-Studio-Productions/Square-Pixels/refs/heads/main/Screenshot%202023-09-22%20165106.png" class="parallax-image" alt="Picture of lighting at night.">
+    <img src="images\products\games\square-pixels-lighting.png" class="parallax-image" alt="Picture of lighting at night.">
   </div>
   <div class="parallax-container">
-    <img src="https://github.com/GusInfiniteLinesOfCode/Terraria_styled_game/assets/101442959/7458632a-b966-46ca-a98c-60db0b508d55" class="parallax-image" alt="Landscape generation">
+    <img src="images\products\games\square-pixels-clip.jpg" class="parallax-image" alt="Landscape generation">
   </div>
   <div class="parallax-container">
-    <img src="https://github.com/Unlim8ted-Studio-Productions/Square-Pixels/assets/138305056/2fc9957c-76ef-4ab4-b819-1cd0614d2bcc" class="parallax-image" alt="Inventory">
+    <img src="images\products\games\square-pixels-inven.png" class="parallax-image" alt="Inventory">
   </div>
   <div class="parallax-container">
-    <video src="https://github.com/GusInfiniteLinesOfCode/Terraria_styled_game/assets/101442959/60913d36-27a7-488d-8ccb-946445185283" class="parallax-image" alt="Procedural Generation" autoplay loop muted>
+    <video src="images\products\games\square-pixel-gen.mp4" class="parallax-image" alt="Procedural Generation" autoplay loop muted>
   </div>
   <div class="parallax-container">
     <img src="\images\products\software\img.png" class="parallax-image" alt="Character Creator">
