--- a/shop.html
+++ b/shop.html
@@ -392,7 +392,7 @@
               <head>
                   <meta charset="UTF-8">
                   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                  <title>Remove Element from Embed</title>
+                  <title>Unlim8ted Merch Shop</title>
               </head>
               <body>
               
