--- a/index.html
+++ b/index.html
@@ -1866,9 +1866,9 @@
       </select>
     </div>
     <div class="item-category" id="software-items">
-      <a href="products#Square-Pixels" class="item-box" data-category="entertainment">
+      <a href="square-pixels" class="item-box" data-category="entertainment">
         <img
-          src="https://github.com/Unlim8ted-Studio-Productions/Square-Pixels/blob/main/src/Recources/program%20recources/Screenshot%202023-09-21%20181742.png?raw=true"
+          src="unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png"
           alt="Square Pixels">
         <h3>Square Pixels</h3>
       </a>
