--- a/index.html
+++ b/index.html
@@ -41,6 +41,88 @@
   <meta name="keywords"
     content="films, music, books, games, software, AI products, entertainment, unlim8ted, Unlim8ted Studio Productions" />
   <meta name="author" content="Unlim8ted Studio Productions" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Unlim8ted Studio Productions",
+  "url": "https://unlim8ted.com",
+  "logo": "https://unlim8ted.com/images/logo/logo.png",
+  "description": "Unlim8ted Studio Productions is a dynamic entertainment company creating innovative experiences across films, games, music, books, software, and AI products.",
+  "foundingDate": "2019",
+  "founder": {
+    "@type": "Person",
+    "name": "Anonymous Programmer"
+  },
+  "contactPoint": [
+        {
+      "@type": "ContactPoint",
+      "email": "contact@unlim8ted.com",
+      "contactType": "General Inquiry",
+      "description": "Contact for general inquiries about Unlim8ted Studio Productions."
+    },
+        {
+      "@type": "ContactPoint",
+      "email": "support@unlim8ted.com",
+      "contactType": "Customer Support",
+      "description": "Contact for customer support and assistance."
+    }
+  ],
+  "sameAs": [
+    "https://www.youtube.com/@unlim8tedstudioproductions",
+    "https://github.com/Unlim8ted-Studio-Productions",
+    "https://www.reddit.com/r/Unlim8ted/",
+    "https://discord.gg/Unlim8ted"
+  ],
+  "department": [
+    {
+      "@type": "Movie",
+      "name": "The Life of a Meatball",
+      "description": "An animated film that follows the adventures of a meatball, exploring themes of identity and belonging in a humorous and thought-provoking way.",
+      "image": "https://unlim8ted.com/images/products/films/The Life of a Meatball.jpg",
+      "datePublished": "2024-01-05",
+      "director": {
+        "@type": "Person",
+        "name": "Anonymous"
+      },
+      "voiceActors": [
+        {
+          "@type": "Person",
+          "name": "Anonymous"
+        },
+        {
+          "@type": "Person",
+          "name": "Anonymous"
+        }
+      ],
+      "genre": "Animation, Comedy",
+      "url": "https://m.youtube.com/watch?v=FiDwWp7ZteE"
+    },
+    {
+      "@type": "VideoGame",
+      "name": "Square Pixels",
+      "description": "A 2D pixelated sandbox adventure inspired by Terraria, offering a rich world filled with exploration, crafting, and action-packed adventures.",
+      "image": "https://unlim8ted.com/images/products/software/Screenshot 2023-09-21 181742(1).png",
+      "datePublished": "2025-06-15",
+      "operatingSystem": [
+        "Windows",
+        "Linux",
+        "macOS"
+      ],
+      "applicationCategory": "Game",
+      "genre": "Adventure, Sandbox",
+      "url": "https://unlim8ted.com/square-pixels",
+      "offers": {
+        "@type": "Offer",
+        "price": "19.99",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/PreOrder",
+        "url": "https://store.steampowered.com/app/123456/Square_Pixels/"
+      }
+    }
+  ]
+}
+</script>
 
 
   <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
