--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
 
     <!-- Video Background -->
     <video autoplay="" muted="" loop="" id="backgroundVideo"
-      style="position: absolute; top: 0; left: 0; width: 100%; height: auto; z-index: 1; object-fit: cover;pointer-events: none;">
+      style="position: absolute; top: 0; left: 0; width: 100%; height: auto; z-index: 1; object-fit: cover;pointer-events: none; min-height: 150px; max-height: 500px;">
       <canvas id="canvas" style="z-index:300"></canvas>
       <source id="video" src="images/back.webm" type="video/mp4">
       Your browser does not support the video tag.
