--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,7 @@
         <h2>Films</h2>
         <p>Explore our latest films.</p>
       </a>
-      <a href="#music" class="product-box">
+      <a href="/music" class="product-box">
         <img src="images\products\music\music icon.png" alt="Music">
         <h2>Music</h2>
         <p>Listen to our newest music releases.</p>
